--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ lib-cov
 *.pid
 *.gz
 *.swp
-*.todo
+
 
 pids
 logs
@@ -16,6 +16,9 @@ tmp
 
 # Build
 public/css/main.css
+
+# DB config
+ormconfig.json
 
 # Temporary
 tmp/
