integração com mailgun

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ APP_WEB_URL=http://localhost:3000
 
 # APP API
 APP_API_URL=http://localhost:3333
+
+# MAIL
+MAIL_DRIVER=mailgun
+# MAIL DRIVER ACESS KEYS
+MAILGUN_API_KEY=
+MAILGUN_DOMAIN=
