--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mongodb": "3.6.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
+    "nodemailer-mailgun-transport": "^2.0.2",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
@@ -35,8 +37,10 @@
     "@types/hapi__joi": "^17.1.6",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mailgun-js": "^0.22.11",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.0",
+    "@types/nodemailer-mailgun-transport": "^1.4.2",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.1.1",
