--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,10 @@
-# JWT
+# APLICATION
 APP_SECRET=
-
-# APP
 APP_WEB_URL=http://localhost:3000
-
-# APP API
 APP_API_URL=http://localhost:3333
 
 # MAIL
-MAIL_DRIVER=mailgun
+MAIL_DRIVER=
 # MAIL DRIVER ACESS KEYS
 MAILGUN_API_KEY=
 MAILGUN_DOMAIN=
