integração com amazon s3

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,18 @@
 # APLICATION
-APP_SECRET=
+APP_SECRET=262cb3bd4c45a3c71caab2e30764b283
 APP_WEB_URL=http://localhost:3000
 APP_API_URL=http://localhost:3333
 
+# STORAGE
+STORAGE_DRIVER=disk
+
 # MAIL
-MAIL_DRIVER=
-# MAIL DRIVER ACESS KEYS
+MAIL_DRIVER=etheral
+
+# MAILGUN  ACCESS KEYS
 MAILGUN_API_KEY=
 MAILGUN_DOMAIN=
+
+# AWS
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
