--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "aws-sdk": "^2.841.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.4",
     "class-transformer": "^0.3.2",
@@ -21,6 +22,7 @@
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
+    "mime": "^2.5.0",
     "mongodb": "3.6.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
