--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "nodemailer": "^6.4.17",
     "nodemailer-mailgun-transport": "^2.0.2",
     "pg": "^8.5.1",
+    "rate-limiter-flexible": "^2.2.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.30",
@@ -45,6 +47,7 @@
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.0",
     "@types/nodemailer-mailgun-transport": "^1.4.2",
+    "@types/redis": "^2.8.28",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.1.1",
